--- a/hw2/backend/package.json
+++ b/hw2/backend/package.json
@@ -10,11 +10,13 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@types/multer": "^1.4.8",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
