--- a/hw2/frontend/package.json
+++ b/hw2/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
+    "@types/multer": "^1.4.8",
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
